--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 body{
-    background-color: #bdbdbd;
-    color: #5a5a5a;
+    background-color: #333333f2;
+    color: #e8e7e7;
+    font-family: 'Poppins', sans-serif;
 }
 .form {
     background-color: #87878750;
